# DawnChat

./: .cursorignore  .cursorrules  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  README.zh.md  TRADEMARK.md  build-all.sh  build-debug.sh  build-release.sh  build.sh  dev.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json
.github/workflows/: ci.yml  codeql.yml  macos-release.yml  secret-scan.yml  windows-release.yml
apps/: compare_sdks.py
apps/dawnchat-android/: capacitor.config.json  package-lock.json  package.json
apps/dawnchat-ios/: capacitor.config.ts  package-lock.json  package.json
apps/desktop/: package-lock.json  package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/entitlements/: opencode-sidecar.entitlements
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_paths.rs  backend_launcher.rs  commands.rs  deep_link.rs  heartbeat.rs  lib.rs  logger.rs  main.rs  port_cleanup.rs  process_supervisor.rs
apps/frontend/: .gitignore  README.md  README.zh.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
config/: dawnchat-plugins.lock.json
scripts/: download-dawnchat-plugins.sh  download-runtime-assets.sh  ensure_pbs_deps.py  macos-release.env.example  runtime-assets-manifest.json  runtime_asset_manifest.py
scripts/ci/: macos-packaged-smoke.sh
scripts/dev/: README.md  args.sh  common.sh  deps.sh  runtime.sh  services.sh  sync.sh  (+2 more)
(+430 files in other folders)
