[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2.0.0"
chrono = "0.4"
dirs = "5.0"
tauri-plugin-store = "2.4.1"
lazy_static = "1.4"
rusqlite = { version = "0.31", features = ["bundled", "uuid"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
tokio = { version = "1.43.0", features = ["time", "rt", "macros"] }
libc = "0.2"

# Tracing
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
url = "2.5"
